--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-functions": "^0.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-image-lightbox": "^4.5.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
